--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -258,6 +258,35 @@ TextRenderer readOnly cell
   color: #777;
 }
 
+
+/*
+TextRenderer horizontal alignment
+*/
+.handsontable .htLeft{
+  text-align: left;
+}
+.handsontable .htCenter{
+  text-align: center;
+}
+.handsontable .htRight{
+  text-align: right;
+}
+.handsontable .htJustify{
+  text-align: justify;
+}
+/*
+TextRenderer vertical alignment
+*/
+.handsontable .htTop{
+  vertical-align: top;
+}
+.handsontable .htMiddle{
+  vertical-align: middle;
+}
+.handsontable .htBottom{
+  vertical-align: bottom;
+}
+
 /*
 TextRenderer placeholder value
 */
